--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-apply plugin: 'com.huawei.ohos.app'
+//apply plugin: 'com.huawei.ohos.app'
+plugins {
+  id "com.huawei.ohos.app"
+  id "org.sonarqube" version "3.3"
+}
 
 ohos {
     compileSdkVersion 5
@@ -34,4 +38,14 @@ allprojects {
         }
         jcenter()
     }
+}
+
+
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "2"
+    property "sonar.organization", "sri-hari"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
 }
