--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-//apply plugin: 'com.huawei.ohos.app'
-plugins {
-  id "com.huawei.ohos.app"
-  id "org.sonarqube" version "3.3"
-}
+apply plugin: 'com.huawei.ohos.app'
 
 ohos {
     compileSdkVersion 5
@@ -40,7 +36,9 @@ allprojects {
     }
 }
 
-
+plugins {
+  id "org.sonarqube" version "3.3"
+}
 
 sonarqube {
   properties {
