--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply plugin: 'com.huawei.ohos.app'
+apply plugin: 'org.sonarqube'
 
 ohos {
     compileSdkVersion 5
@@ -34,10 +35,6 @@ allprojects {
         }
         jcenter()
     }
-}
-
-plugins {
-  id "org.sonarqube" version "3.3"
 }
 
 sonarqube {
