--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply plugin: 'com.huawei.ohos.app'
-apply plugin: 'org.sonarqube'
+
+plugins {
+  id "org.sonarqube" version "3.3"
+}
 
 ohos {
     compileSdkVersion 5
