--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-apply plugin: 'com.huawei.ohos.app'
+plugins {
+  id 'com.huawei.ohos.app'
+  id "org.sonarqube" version "3.3"
+}
 
 ohos {
     compileSdkVersion 5
@@ -36,9 +38,6 @@ allprojects {
     }
 }
 
-plugins {
-  id "org.sonarqube" version "3.3"
-}
 
 sonarqube {
   properties {
