--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+apply plugin: 'com.huawei.ohos.app'
+
 buildscript {
     repositories {
         maven {
@@ -15,7 +17,6 @@ buildscript {
 }
 
 plugins {
-  id 'com.huawei.ohos.app'
   id "org.sonarqube" version "3.3"
 }
 
