--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,11 +23,6 @@ jobs:
         distribution: 'adopt'
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: set environment variables
-      uses: allenevans/set-env@v2.0.0
-      with:
-          OHOS_SDK_HOME: ${GITHUB_WORKSPACE}
-
     - name: Printenv
       run: |
            echo "OHOS_SDK_HOME=${OHOS_SDK_HOME}"
@@ -36,5 +31,20 @@ jobs:
       run: echo %cd%
     - name: environment
       run: set OHOS_SDK_HOME=%cd%/huawei
-    - name: Build with Gradle
-      run: ./gradlew build
+    - name: Cache SonarCloud packages
+      uses: actions/cache@v1
+      with:
+        path: ~/.sonar/cache
+        key: ${{ runner.os }}-sonar
+        restore-keys: ${{ runner.os }}-sonar
+    - name: Cache Gradle packages
+      uses: actions/cache@v1
+      with:
+        path: ~/.gradle/caches
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
+        restore-keys: ${{ runner.os }}-gradle
+    - name: Build and analyze
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew build sonarqube --info
