--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,3 +44,8 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: ./gradlew assembleDebug sonarqube --info
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with: 
+        name: assets-for-download
+        path: build\outputs\hap\debug\phone
