--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -49,3 +49,17 @@ jobs:
       with: 
         name: assets-for-download
         path: build\outputs\hap\debug\phone
+        
+        
+  checkstyle_job:
+    runs-on: ubuntu-latest
+    name: Checkstyle job
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Run check style
+      uses: nikitasavinov/checkstyle-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        reporter: 'github-pr-check'
+        tool_name: 'testtool'
