--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -61,5 +61,7 @@ jobs:
       uses: nikitasavinov/checkstyle-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        reporter: 'github-pr-check'
+        reporter: 'github-pr-review'
         tool_name: 'testtool'
+        filter_mode: 'nofilter'
+        level: 'info'
