--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -78,5 +78,5 @@ jobs:
       - uses: dbelyaev/action-checkstyle@master
         with:
           github_token: ${{ secrets.github_token }}
-          reporter: github-pr-review
+          reporter: github-check
           level: warning
