--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
 
 plugins {
   id "org.sonarqube" version "3.3"
+  id "com.github.spotbugs" version "4.7.1"
 }
 
 apply plugin: 'com.huawei.ohos.app'
