--- a/build.gradle
+++ b/build.gradle
@@ -45,5 +45,6 @@ sonarqube {
     property "sonar.projectKey", "2"
     property "sonar.organization", "sri-hari"
     property "sonar.host.url", "https://sonarcloud.io"
+    property "sonar.sources", "entry"
   }
 }
