--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,6 @@
+apply plugin: 'com.huawei.ohos.app'
+apply plugin: 'org.sonarqube'
+
 buildscript {
     repositories {
         maven {
@@ -11,12 +14,8 @@ buildscript {
     dependencies {
         classpath 'com.huawei.ohos:hap:2.4.2.5'
         classpath 'com.huawei.ohos:decctest:1.0.0.6'
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3"
     }
-}
-
-plugins {
-  id "org.sonarqube" version "3.3"
-  id "com.github.spotbugs" version "4.7.1"
 }
 
 apply plugin: 'com.huawei.ohos.app'
