--- a/build.gradle
+++ b/build.gradle
@@ -45,5 +45,6 @@ sonarqube {
     property "sonar.organization", "sri-hari"
     property "sonar.host.url", "https://sonarcloud.io"
     property "sonar.sources", "entry"
+    property "sonar.java.binaries", "entry\build\intermediates\javac\debug\classes"
   }
 }
