--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,6 @@ sonarqube {
     property "sonar.organization", "sri-hari"
     property "sonar.host.url", "https://sonarcloud.io"
     property "sonar.sources", "entry"
-    property "sonar.java.binaries", "entry/build/intermediates/javac/debug/classes"
+    property "sonar.java.binaries", "entry/build/intermediates/javac/debug/classes,circularprogressview/build/intermediates/javac/debug/classes"
   }
 }
